--- a/src/main/resources/config.json
+++ b/src/main/resources/config.json
@@ -8,6 +8,6 @@
   "SOLR_HOST" : "localhost",
   "SOLR_PORT" : 8983,
   "SOLR_PATH" : "solr",
-  "SOLR_CORE" : "data",
+  "SOLR_CORE" : "dataa",
   "PRODUCT_TTL" : 3600
 }
