--- a/src/main/resources/config.dist.json
+++ b/src/main/resources/config.dist.json
@@ -2,8 +2,8 @@
   "DATABASE_HOST" : "Localhost",
   "DATABASE_PORT" : 3306,
   "DATABASE_USERNAME" : "root",
-  "DATABASE_PASSWORD" : "nitram123",
-  "DATABASE_NAME" : "disdb",
+  "DATABASE_PASSWORD" : "password",
+  "DATABASE_NAME" : "cbsexam",
   "ENCRYPTION" : true,
   "SOLR_HOST" : "localhost",
   "SOLR_PORT" : 8983,
