--- a/pom.xml
+++ b/pom.xml
@@ -84,7 +84,24 @@
         <artifactId>bcprov-jdk15on</artifactId>
         <version>1.55</version>
       </dependency>
+        <dependency>
+            <groupId>io.jsonwebtoken</groupId>
+            <artifactId>jjwt-api</artifactId>
+            <version>0.10.5</version>
+        </dependency>
+        <dependency>
+            <groupId>io.jsonwebtoken</groupId>
+            <artifactId>jjwt-impl</artifactId>
+            <version>0.10.5</version>
+        </dependency>
+        <dependency>
+            <groupId>io.jsonwebtoken</groupId>
+            <artifactId>jjwt-jackson</artifactId>
+            <version>0.10.5</version>
+        </dependency>
+
     </dependencies>
+
 
     <properties>
         <jersey.version>2.23.2</jersey.version>
